# virgo_ad_pvalues_analysis

./: .gitignore  README.md  parallel_p_test_ad_virgo.py  pyproject.toml
docs/: .gitignore  bbh_injections_snr.py  collect_all_evidences.py  collect_all_evidences.sl  original_pe.py  pe_study.ipynb  pe_study.py  pp_test.py  real_noise_pe_study.py  simulation_plotter.py  snr_logbf_summary.py  tet.txt  tmp.slurm
docs/GW150914/: GW150914.py  GW150914.slurm
docs/GW150914_v2/: GW150914_analysis.py  analysis.slurm  generate_welch_and_sgvb_psd_for_GW150914.py
docs/GW150914_v2/data_cache/: H1_1126259332400_1126259460400.npz  L1_1126259332400_1126259460400.npz
docs/fast_pe_study/: pe_study.py  pe_study.sl
docs/real_noise_pe_study/: real_noise_pe_study.py  real_noise_pe_study.sl
docs/simulate_noise_pe_study/: all_seeds_results.py  simulate_noise_pe_study.py  simulate_noise_pe_study.sl
src/sgvb_psd/: logging.py  psd_estimator.py
src/sgvb_psd.egg-info/: PKG-INFO
src/sgvb_psd/backend/: __init__.py  analysis_data.py  bayesian_model.py  vi_runner.py
src/sgvb_psd/postproc/: __init__.py  matplotlibrc  plot_coherence.py  plot_losses.py  plot_psd.py  psd_analyzer.py
src/sgvb_psd/utils/: __init__.py  periodogram.py  sim_varma.py  tf_utils.py  utils.py
src/sgvb_psd/utils/benchmark/: benchmark.py  cli.py
src/sgvb_univar/: compute_js_divergence.py  lnz_correction.py  psd_estimator.py
src/sgvb_univar/backend/: analysis_data.py  bayesian_model.py  compute_psd.py  vi_runner.py
src/sgvb_univar/example_datasets/: ar_data.py  lvk_data.py
src/sgvb_univar/postproc/: plot_coherence.py
src/sgvb_univar/utils/: utils.py
tests/: bilby_lnl_plotter.py  test_end_to_end.py
